feat(doctor): add doctor client code and doctor api call
